tests/ui/stability-attribute/const-stability-attribute-implies-missing.stderr
error: feature `const_bar` implying `const_foobar` does not exist
  --> $DIR/const-stability-attribute-implies-missing.rs:10:1
   |
LL | #[rustc_const_unstable(feature = "const_foobar", issue = "1", implied_by = "const_bar")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `foobar` is not yet stable as a const fn
  --> $DIR/const-stability-attribute-implies-missing.rs:16:18
   |
LL | const VAR: u32 = foobar();
   |                  ^^^^^^^^
   |
   = note: use of unstable library feature `const_foobar`
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(const_foobar)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

